# water

./: .dir-locals.el  .taplo.toml  Cargo.toml  build.rs
icons/: drop.raw  mqtt.raw  nonet.raw  nowifi.raw  wifi.raw
src/: appcore.rs  error.rs  health.rs  lib.rs  power.rs  time.rs  watchdog.rs  watering.rs
src/command/: mod.rs  status.rs
src/display/: gui.rs  mod.rs
src/io/: gpio.rs  i2c.rs  led.rs  mod.rs  rtc.rs  wifi.rs
src/net/: mod.rs  mqtt.rs  ntp.rs  stack.rs
