[package]
edition      = "2024"
name         = "water"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "water"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false
harness = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32",
  "log-04",
  "unstable",
] }
log = "0.4"

critical-section = "1.2"
embassy-executor = { version = "0.7", features = [
  "log",
  "task-arena-size-32768",
] }
embassy-net = { version = "0.7", features = [
  "dhcpv4",
  "log",
  "tcp",
  "udp",
  "dns",
  "icmp",
] }
embassy-time = { version = "0.5", features = ["log"] }
embassy-sync = "0.7"
embedded-io = "0.6"
embedded-io-async = "0.6"
rust-mqtt = { version = "0.3", default-features = false }

esp-alloc = "0.8"
heapless = "0.8"
esp-backtrace = { version = "0.17", features = [
  "exception-handler",
  "panic-handler",
  "println",
  "esp32",
] }
esp-hal-embassy = { version = "0.9", features = ["esp32", "log-04"] }
esp-println = { version = "0.15", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.15", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
sntpc = { version = "0.6", default-features = false,  features = ["embassy-socket"] }
chrono = { version = "0.4.39", default-features = false, features = [ "alloc" ] }
jiff = { version = "0.2", default-features = false, features = ["static"] }
chrono-tz = { version = "0.5", default-features = false }
static_cell = "2"
ssd1306 = { version = "0.10", features = ["async", "graphics"] }
embedded-graphics = "0.8"

# Error handling dependencies
thiserror-no-std = { version = "2", default-features = false }
display-interface = "0"
[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'
overflow-checks  = false
