[package]
edition      = "2024"
name         = "water"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "water"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false
harness = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0", features = [
  "esp32",
  "log-04",
  "unstable",
] }
log = "0.4"

critical-section = "1.2"
embassy-executor = { version = "0.9", features = [
  "log",
] }
embassy-net = { version = "0.7", features = [
  "dhcpv4",
  "log",
  "tcp",
  "udp",
  "dns",
  "icmp",
] }
embassy-time = { version = "0.5", features = ["log"] }
embassy-sync = "0.7"
embedded-io = "0.7"
embedded-io-async = "0.7"
rust-mqtt = { version = "0.3", default-features = false }

esp-alloc = "0.9"
heapless = { version = "0.9", features = ["serde"] }
esp-backtrace = { version = "0.18", features = [
  "panic-handler",
  "println",
  "esp32",
] }
esp-rtos = { version = "0.2", features = ["embassy", "esp32", "log-04", "esp-radio"] }
esp-println = { version = "0.16", features = ["esp32", "log-04"] }
esp-radio = { version = "0.17", features = [
  "esp32",
  "log-04",
  "wifi",
] }
smoltcp = { version = "0.12", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
sntpc = { version = "0.7", default-features = false,  features = ["embassy-socket"] }
chrono = { version = "0.4.42", default-features = false, features = [ "alloc" ] }
jiff = { version = "0.2", default-features = false, features = ["static", "serde"] }
chrono-tz = { version = "0.10", default-features = false }
static_cell = "2"
ssd1306 = { version = "0.10", features = ["async", "graphics"] }
embedded-graphics = "0.8"

# Error handling dependencies
thiserror-no-std = { version = "2", default-features = false }
display-interface = "0"

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0", features = ["heapless"] }

nb = "1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'
overflow-checks  = false
